--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc1'
     implementation 'com.android.support:cardview-v7:28.0.0-rc1'
+    implementation "com.google.android.gms:play-services-location:15.0.1"
 }
